@@ -1,12 +1,12 @@
 ========================================================================
-README for Kinect 3D Video Capture Project version 3.6
+README for Kinect 3D Video Capture Project version 3.7
 Copyright (c) 2010-2018 Oliver Kreylos
 ========================================================================
 
 Requirements
 ============
 
-This software requires the Vrui VR toolkit, version 4.5 build 001 or
+This software requires the Vrui VR toolkit, version 4.6 build 005 or
 newer. It also requires libusb version 1.0, and that Vrui was configured
 with support for libusb prior to its installation. To properly work with
 multiple Kinect-for-Xbox version 1473 and/or Kinect-for-Windows devices,
@@ -40,7 +40,7 @@ instructions need to be changed.
 2. Change into the Kinect 3D Video Capture Project's base directory:
    > cd Kinect-<version>
 
-3. If the Vrui version installed in step 0 was not 4.5, or Vrui's
+3. If the Vrui version installed in step 0 was not 4.6, or Vrui's
    installation directory was changed from the default of /usr/local,
    adapt the makefile using a text editor. Change the value of
    VRUI_MAKEDIR close to the beginning of the file as follows:
